feat: db migrations

--- a/src/CleanArchitecture.Api/appsettings.json
+++ b/src/CleanArchitecture.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5432;Database=cleanarchitecture;Username=db_user;Password=db_user_pass;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
