--- a/src/CleanArchitecture.Api/appsettings.json
+++ b/src/CleanArchitecture.Api/appsettings.json
@@ -1,12 +1,17 @@
 {
-  "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=cleanarchitecture;Username=db_user;Password=db_user_pass;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Database": "Host=localhost;Port=5432;Database=cleanarchitecture;Username=db_user;Password=db_user_pass;"
+    },
+    "Jwt": {
+        "SecretKey": "834CCBB0-E677-445D-84E0-7000AAC2A80D",
+        "Issuer": "http://localhost:5015",
+        "Audience": "http://localhost:5015"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
