--- a/src/Core/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/src/Core/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
