--- a/src/CleanArchitecture.Api/appsettings.json
+++ b/src/CleanArchitecture.Api/appsettings.json
@@ -31,5 +31,9 @@
             }
         ],
         "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    },
+    "Outbox": {
+        "IntervalInSeconds": 10,
+        "BatchSize": 10
     }
 }
